# rp-bp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  Log.out  MANIFEST.in  README.md  README.rst  build.py  environment.yml  installation.html  installation.md  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py  usage-instructions.html  usage-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  pypi.yml
docs/: Makefile  analysis-scripts.html  analysis-scripts.md  apps.rst  conf.py  creating-reference-indices.html  creating-reference-indices.md  custom-alignment-files.html  custom-alignment-files.ipynb  custom-alignment-files.md  genome-profile-construction.html  genome-profile-construction.ipynb  getting-started.md  getting-started.rst  index.rst  installation.html  installation.ipynb  installation.md  installation.rst  reference-genome-indexing.html  reference-genome-indexing.ipynb  requirements.txt  running-example.html  running-example.ipynb  running-example.md  translation-prediction.html  translation-prediction.ipynb  usage-instructions.html  usage-instructions.ipynb  usage-instructions.md  usage.rst
docs/source/: api-app-profiles.rst  api-app-rpbp.rst  api-prepare.rst  api-rpbp.rst  api-summarize-profiles.rst  api-summarize-rpbp.rst  api.rst  apps.rst  conf.py  defaults.rst  existing-alignments.rst  faq.rst  getting-started.rst  howto-annotation.rst  howto-config.rst  howto-qc.rst  howto-run.rst  index.rst  installation.rst  rpbp-genome.rst  tutorial-cel.rst  tutorial-containers.rst  tutorial.rst  user-guide.rst
models/metagene-periodicity/: no-periodicity.stan  start-high-low-low.stan
models/orf-translation/: gaussian-naive-bayes.stan  periodic-cauchy-mixture.stan
models/translational-efficiency/: gaussian-te.stan
notebooks/preprocessing/: create-read-filtering-bar-chart.ipynb  create-read-length-distribution-bar-chart.ipynb
notebooks/rpbp-predictions/: create-orf-length-distribution-plot.ipynb  create-orf-type-bar-chart.ipynb  create-orf-type-metagene-profiles.ipynb  create-orf-type-pie-chart.ipynb  create-orf-types-table.ipynb  visualize-subcodon-clusters.ipynb
rpbp/: __init__.py  defaults.py  filenames.py  process_all_samples.py  process_all_samples.py.bak  rpbp_utils.py  run_all_rpbp_instances.py  run_rpbp_pipeline.py
rpbp/analysis/: create_riboseq_test_dataset.py  extract_orf_types.py  find_differential_micropeptides.py
rpbp/analysis/conservation/: match_orfs_with_mackowiak_sorfs.py  perform_mackowiak_permutation_test.py
rpbp/analysis/profile_construction/: cluster_subcodon_counts.py  collect_read_length_orf_profiles.py  create_preprocessing_report.py  create_read_length_metagene_profile_plot.py  create_read_length_orf_profiles.py  create_rpbp_preprocessing_report.py  get_all_read_filtering_counts.py  visualize_metagene_profile.py  visualize_metagene_profile_bayes_factor.py  visualize_read_filtering_counts.py  visualize_subcodon_clusters.py
rpbp/analysis/proteomics/: create_orf_peptide_coverage_line_graph.py  create_proteomics_report.py  filter_nonunique_peptide_matches.py  get_all_orf_peptide_matches.py  get_orf_peptide_matches.py
rpbp/analysis/qti_seq/: match_orfs_with_qti_seq_peaks.py  perform_qti_seq_permutation_test.py
rpbp/analysis/rpbp_predictions/: add_mygene_info_to_orfs.py  create_bf_rpkm_scatter_plot.py  create_orf_length_distribution_line_graph.py  create_orf_types_bar_chart.py  create_orf_types_pie_chart.py  create_predictions_report.py  create_rpbp_predictions_report.py  visualize_orf_type_metagene_profiles.py
rpbp/genome_profile_construction/: create_base_genome_profile.py  create_filtered_genome_profile.py  estimate_metagene_profile_bayes_factors.py  extract_metagene_profiles.py  remove_multimapping_reads.py  select_periodic_offsets.py
rpbp/orf_profile_construction/: create_base_genome_profile.py  create_orf_profiles.py  estimate_metagene_profile_bayes_factors.py  extract_metagene_profiles.py  extract_orf_profiles.py  remove_multimapping_reads.py  select_periodic_offsets.py  smooth_orf_profiles.py
rpbp/reference_preprocessing/: create_star_reference.py  extract_orf_coordinates.py  extract_orfs.py  extract_transcript_fasta.py  label_orfs.py  prepare_genome.py  prepare_rpbp_genome.py
rpbp/translation_prediction/: .predict_translated_orfs.py.swp  estimate_orf_bayes_factors.py  extract_orf_profiles.py  merge_replicate_orf_profiles.py  predict_translated_orfs.py  select_final_prediction_set.py  smooth_orf_profiles.py
rpbp_models/nonperiodic/: no-periodicity.stan  start-high-high-low.stan  start-high-low-high.stan
rpbp_models/periodic/: start-high-low-low.stan
rpbp_models/translated/: periodic-gaussian-mixture.stan  zero-inflated-periodic-cauchy-mixture.stan
rpbp_models/untranslated/: gaussian-naive-bayes.stan
src/rpbp/: __init__.py  defaults.py  run_all_rpbp_instances.py  run_rpbp_pipeline.py
src/rpbp/analysis/: create_riboseq_test_dataset.py  find_differential_micropeptides.py
src/rpbp/analysis/profile_construction/: collect_read_length_orf_profiles.py  create_read_length_metagene_profile_plot.py  create_read_length_orf_profiles.py  create_rpbp_preprocessing_report.py  get_all_read_filtering_counts.py  summarize_rpbp_profile_construction.py  visualize_metagene_profile_bayes_factor.py  visualize_read_filtering_counts.py  visualize_subcodon_clusters.py
src/rpbp/orf_profile_construction/: create_base_genome_profile.py  create_orf_profiles.py  estimate_metagene_profile_bayes_factors.py  extract_metagene_profiles.py  extract_orf_profiles.py  select_periodic_offsets.py
src/rpbp/reference_preprocessing/: extract_orf_coordinates.py  label_orfs.py  prepare_rpbp_genome.py
src/rpbp/ribo_utils/: __init__.py  compile_rpbp_models.py  filenames.py  utils.py
src/rpbp/translation_prediction/: estimate_orf_bayes_factors.py  merge_replicate_orf_profiles.py  predict_translated_orfs.py  select_final_prediction_set.py
tests/: TestRpBp.py
tests/regression/: conftest.py  test_prepare_genome.py  test_rpbp.py
(+26 files in other folders)
