[metadata]
name = rpbp
description = "Rp-Bp: Ribosome Profiling with Bayesian Predictions"
long-description = file: README.md
version = 2.0.0
url = https://github.com/dieterich-lab/rp-bp
author = Brandon Malone
maintainer = Etienne Boileau
maintainer-email = boileau@uni-heidelberg.de
license = MIT
keywords = bioinformatics, riboseq, open reading frame discovery, translation
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.0

[options]
package_dir =
    = src
packages = find:
# major dependencies (including pinned versions) are installed with pbio
# see requirements.txt
install_requires =
    pbiotools
python_requires = >=3.6,<3.11
# Add entries to MANIFEST.in
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    # preprocessing
    extract-orf-coordinates = rpbp.reference_preprocessing.extract_orf_coordinates:main
    label-orfs = rpbp.reference_preprocessing.label_orfs:main
    prepare-rpbp-genome = rpbp.reference_preprocessing.prepare_rpbp_genome:main
    # profile construction
    create-orf-profiles = rpbp.orf_profile_construction.create_orf_profiles:main
    create-base-genome-profile = rpbp.orf_profile_construction.create_base_genome_profile:main
    extract-orf-profiles = rpbp.orf_profile_construction.extract_orf_profiles:main
    merge-replicate-orf-profiles = rpbp.translation_prediction.merge_replicate_orf_profiles:main
    run-rpbp-pipeline = rpbp.run_rpbp_pipeline:main
    run-all-rpbp-instances = rpbp.run_all_rpbp_instances:main
    # translation prediction
    predict-translated-orfs = rpbp.translation_prediction.predict_translated_orfs:main
    estimate-orf-bayes-factors = rpbp.translation_prediction.estimate_orf_bayes_factors:main
    select-final-prediction-set = rpbp.translation_prediction.select_final_prediction_set:main
    # preprocessing report
#     rpbp-profile-construction-dashboard = rpbp.analysis.profile_construction.dashboard.rpbp_profile_construction_dashboard:main
    summarize-rpbp-profile-construction = rpbp.analysis.profile_construction.summarize_rpbp_profile_construction:main
    visualize-metagene-profile-bayes-factor = rpbp.analysis.profile_construction.visualize_metagene_profile_bayes_factor:main
    get-all-read-filtering-counts = rpbp.analysis.profile_construction.get_all_read_filtering_counts:main
    # predictions report
#     rpbp-predictions-dashboard = rpbp.analysis.rpbp_predictions.dashboard.rpbp_predictions_dashboard:main
    summarize-rpbp-predictions = rpbp.analysis.rpbp_predictions.summarize_rpbp_predictions:main
    visualize-orf-type-metagene-profiles = rpbp.analysis.rpbp_predictions.visualize_orf_type_metagene_profiles:main
    # proteomics
    get-orf-peptide-matches = rpbp.analysis.proteomics.get_orf_peptide_matches:main
    get-all-orf-peptide-matches = rpbp.analysis.proteomics.get_all_orf_peptide_matches:main
    filter-nonunique-peptide-matches = rpbp.analysis.proteomics.filter_nonunique_peptide_matches:main
    # other
    create-read-length-orf-profiles = rpbp.analysis.profile_construction.create_read_length_orf_profiles:main
    collect-read-length-orf-profiles = rpbp.analysis.profile_construction.collect_read_length_orf_profiles:main

[tool:pytest]
log_cli = True
log_cli_level = INFO

# sphinx integration with setuptools
# [build_sphinx]
